traces/bug_90.txt
/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:114: error: MEMORY_LEAK
  memory dynamically allocated to `return` by call to `calloc()` at line 107, column 22 is not reachable after line 114, column 9.
Showing all 6 steps of the trace


/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:105:1: start of procedure get_info()
103.   }
104.   
105. > t_info_pc *get_info(void)
106.   {
107.       t_info_pc *ret = calloc(1, sizeof(t_info_pc));

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:107:5: 
105.   t_info_pc *get_info(void)
106.   {
107. >     t_info_pc *ret = calloc(1, sizeof(t_info_pc));
108.   
109.       if (ret == NULL)

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:109:9: Taking false branch
107.       t_info_pc *ret = calloc(1, sizeof(t_info_pc));
108.   
109.       if (ret == NULL)
               ^
110.           return NULL;
111.       if (parse_version(ret))

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:111:9: Taking false branch
109.       if (ret == NULL)
110.           return NULL;
111.       if (parse_version(ret))
               ^
112.           return NULL;
113.       if (parse_ram(ret, 0))

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:113:9: Taking true branch
111.       if (parse_version(ret))
112.           return NULL;
113.       if (parse_ram(ret, 0))
               ^
114.           return NULL;
115.       if (parse_proco(ret))

/home/runner/work/42sh-infer/42sh-infer/src/config-deprecated/get_info_pc.c:114:9: 
112.           return NULL;
113.       if (parse_ram(ret, 0))
114. >         return NULL;
115.       if (parse_proco(ret))
116.           return NULL;
